--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
     background-color: rgba(0, 0, 0, 0.948);
     color:whitesmoke;
@@ -6,21 +11,30 @@ body{
 
 .header{
 background-color: rgba(12, 42, 240, 0.414);
+padding: 15px;
 }
+
 .header h2{
     font-size: 25px;
 }
 
 .nav a{
 color: whitesmoke;
+text-decoration: none;
+margin-left: 8px;
+margin-right: 8px;
 }
 
 .hero{
-
+    height: 100vh;
 }
 
 .products{
 
+}
+
+.card img{
+    width: 280px;
 }
 
 .shop{
